
# Binary
lib_LTLIBRARIES = libsmartchain.la

libsmartchain_la_SOURCES = libsmartchain.cc
libsmartchain_la_CFLAGS = -fPIC
libsmartchain_la_CPPFLAGS = -fPIC
libsmartchain_la_CXXFLAGS = -fPIC
libsmartchain_la_LDFLAGS = -shared -fPIC

smartchainincludedir = $(includedir)/smartchain
smartchaininclude_HEADERS = includes/smartchain.h
